<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/img_1"
    android:gravity="center">


    <Button
        android:id="@+id/btn_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/chocolate"
        android:backgroundTint="#FA9D300D"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_kitkat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/kitkat"
        android:backgroundTint="#660000"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/btn_dairymilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dairy_milk"
        android:backgroundTint="#462287"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/btn_snickers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/snickers"
        android:backgroundTint="#FA431506"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/btn_ferrero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ferrero"
        android:backgroundTint="#E9D0B31B"
        android:textColor="@color/white" />







</LinearLayout>


